# computer-interact

./: .gitignore  Dockerfile  README.md  instruction-packaging_uploading.txt  pyproject.toml  requirements.txt  requirements1.txt  run.bash
examples/: academic_research_usecase.py  simple_gmail.py  simple_test.py  simple_websearch.py
scripts/: automation.py  browser_agent.py  config.yaml  get_manual_auth.py  gmail_agent.py  supervisor.py  supervisor_agent.py  supervisor_agents.py
scripts/agent_tools/: custom_gmail_toolkit.py  custom_playwright_toolkit.py
scripts/agents/: browser_agent.py
scripts/tools/: custom_gmail_toolkit.py  custom_playwright_fill.py  custom_playwright_toolkit.py
src/: read_gmail.py  research_usecase.py  simple_test.py  test.py  test1.py  websearch_usecase.py
src/browse-bot/: config.yaml  supervisor.py  utils.py
src/browse-bot/agents/: browser_agent.py  gmail_agent.py
src/computer_interact/: browser.py  config_file.py  omni_parser2.py  supervisor.py  utils.py
src/computer_interact/agents/: os_agent.py  prompts.py  web_agent.py  web_agent_json_schema.py
src/computer_interact/nodes/: computer_use_node.py
src/computer_interact/state/: web_agent_state.py
src/computer_interact/tools/: computer_use_tools.py  superviser_router_tools.py
src/web_operator/: supervisor.py  test.py
src/web_operator/agent_tools/: custom_arxiv_toolkit.py
src/web_operator/agents/: arxiv_agent.py  browser_agent.py  gmail_agent.py  sql_agent.py
src/web_operator/nodes/: computer_use_node.py  router_node.py  tools.py
