[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web_operator"
version = "1.0.1"
description = "A library for automating web tasks"
authors = [
    { name = "Dhanoop Karunakaran" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx==3.1",
    "qwen-vl-utils==0.0.10",
    "qwen_agent==0.0.15",
    "transformers-stream-generator==0.0.4",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "accelerate==1.3.0",
    "av==14.1.0",
    "openai==1.60.2",
    "python-dateutil==2.9.0.post0",
    "pyautogui==0.9.54",
    "python-dotenv==1.0.1",
    "pandas==2.2.3" 
]


[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/dkarunakaran/web-operator" 
"Bug Tracker" = "https://github.com/dkarunakaran/web-operator"